lottery-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lottery-ingress
spec:
  rules:
    - host: basselanthony.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  name: http
